# Retail-Stores-Data-Mining

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  vn_retail_system.json
dkkd/: __init__.py  audit.py  audit_stores.py  backtest.py  brand_master.py  classify.py  cli.py  closure_signals.py  config.py  conform.py  contract.py  convergence.py  engine.py  enrich.py  enrich_masothue.py  etl.py  geo.py  ingest.py  license_trends.py  loop.py  operating_status.py  paths.py  postprocess.py  reconcile.py  records.py  retail_taxonomy.py  schema_export.py  snapshot_diff.py  state_report.py  taxpayer.py  tenant.py  transport.py  utils.py
docs/: data-dictionary.md  dkkd-vn-brand-scraper-skill-v4.md  dkkd_database_hierarchy.md
scripts/: generate_brand_configs.py  generate_data_dictionary.py
tests/: conftest.py  test_agents_md.py  test_backtest_closure.py  test_backtest_date_interpolation.py  test_backtest_founding_benchmark.py  test_backtest_greenfield.py  test_backtest_license_trends.py  test_backtest_registration_curve.py  test_backtest_unverified_narrative.py  test_brand_master.py  test_brand_regressions.py  test_cli.py  test_cli_diff_snapshots.py  test_cli_taxpayer.py  test_closure_signals.py  test_config.py  test_contract.py  test_convergence.py  test_engine.py  test_enrich_date_interpolation.py  test_enrich_masothue.py  test_etl.py  test_generate_brand_configs.py  test_geo_lookup.py  test_gold_discovery.py  test_gold_integration.py  test_gold_keywords.py  test_gold_orchestrator.py  test_gold_report.py  test_hierarchy_walk.py  test_ingest.py  test_provinces.py  (+21 more)
(+352 files in other folders)
