[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dkkd"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "urllib3",
    "beautifulsoup4",
    "PyYAML",
    "duckdb",
    "httpx",
    "pandas",
    "openpyxl",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
dkkd = "dkkd.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["dkkd*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "scripts"]
